force-app/main/default/objects/CambioRendimientoAsociado__c/CambioRendimientoAsociado__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CambioRendimientoAsociado</label>
</CustomObject>