force-app/main/default/objects/CambioRendimientoAsociado__c/fields/Antiguedad_desde__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_desde__c</fullName>
    <label>Antigüedad desde</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>