force-app/main/default/objects/CambioRendimientoAsociado__c/fields/Antiguedad_hasta__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_hasta__c</fullName>
    <label>Antigüedad hasta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>