force-app/main/default/objects/CambioRendimientoAsociado__c/fields/Cambio__c.field-meta.xml
<CustomField>
    <fullName>Cambio__c</fullName>
    <label>Cambio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>