force-app/main/default/objects/CambioRendimientoAsociado__c/listViews/Ver_bien.listView-meta.xml
<ListView>
    <fullName>Ver_bien</fullName>
    <columns>NAME</columns>
    <columns>Antiguedad_desde__c</columns>
    <columns>Antiguedad_hasta__c</columns>
    <columns>Cambio__c</columns>
    <columns>Energia__c</columns>
    <columns>Rendimiento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ver bien</label>
    <language>es</language>
</ListView>